# zgm

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: animation.cpp.E49CAD93D992672E.idx  animation.hpp.EA4C739187A9CF48.idx  assetmanager.cpp.14C5BEA526318D41.idx  assetmanager.hpp.FC95DD9C25D7D1B8.idx  collision.cpp.10FAA7388B4E2053.idx  collision.hpp.A1B287211EE1EF09.idx  ecs.cpp.4D4F8605A13CEECB.idx  ecs.hpp.475FC321D049ED0A.idx  format.cpp.9FA4D326B0209705.idx  format.hpp.23D15E4B63646C7F.idx  game.cpp.4607D9AE95F661EB.idx  game.hpp.BDA81171FFC5334E.idx  (+13 more)
core/: CMakeLists.txt  \  assetmanager.cpp  game.cpp  game.hpp  input.cpp  input.hpp  scene.cpp  scene.hpp  scenemanager.cpp  scenemanager.hpp
core/include/: assetmanager.hpp  cursor.hpp  entity_manager.hpp  game.hpp  input.hpp  math.hpp  message.hpp  networkclient.hpp  prefs.hpp  scene.hpp  scenemanager.hpp
core/include/systems/: animation.hpp  collision.hpp  component_base.hpp  ecs.hpp
core/src/: assetmanager.cpp  cursor.cpp  game.cpp  input.cpp  math.cpp  message.cpp  networkclient.cpp  prefs.cpp  scene.cpp  scenemanager.cpp
core/src/systems/: animation.cpp  collision.cpp  ecs.cpp
sandbox/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gamelevel.hpp  source.cpp  splash.hpp  testscene.hpp
sandbox/core/: Makefile  cmake_install.cmake
sandbox/sandbox/: Makefile  cmake_install.cmake
sandbox/utils/: Makefile  cmake_install.cmake
utils/: CMakeLists.txt  format.hpp  logger.cpp  logger.hpp  stdio.hpp
utils/include/: format.hpp  stdio.hpp
utils/src/: format.cpp  stdio.cpp
(+2 files in other folders)
